--- a/_sass/_includes/_section__listing.scss
+++ b/_sass/_includes/_section__listing.scss
@@ -208,7 +208,7 @@
 
   .project__content {
     padding-bottom: 20px;
-    border-bottom: 4px solid $text-dark-color;
+    //border-bottom: 4px solid $text-dark-color; ** THIS IS THE UNDERLINE UNDER THE PEOPLE **
     grid-gap: 0;
   }
 
