Fix front page for mobile

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: default
 
 {% if page.accent_color %}{% capture accent_color %}{{ page.accent_color }}{% endcapture %}{% endif %}
 
-<div class="page-project" style="--accent: {{ accent_color }}">
+<div class="page-project" style="--accent: {{ accent_color }}; margin-bottom: 2em;">
 
 	<header class="post__header header--single">
 
@@ -30,5 +30,5 @@ layout: default
 
 	</section>
 
-	{% include section__about.html divider=true %}
+
 </div>
