Added artgame club page and details

--- a/_sass/_includes/_section__listing.scss
+++ b/_sass/_includes/_section__listing.scss
@@ -36,7 +36,7 @@
   @include mq(desktop)
   {
     grid-template-columns: 22% 22% 22% 22%;
-    padding: 9px;
+    padding: 0px 50px;
     grid-gap: 4%;
   }
   
