--- a/_sass/_includes/_component__header.scss
+++ b/_sass/_includes/_component__header.scss
@@ -24,6 +24,8 @@
     letter-spacing: $sitetitle-spacing;
     line-height: 1;
     color: $text-dark-color;
+    padding-bottom: 10px;
+
 
     @include mq(tabletp) {
       font-size: $sitetitle-medium;
@@ -41,8 +43,8 @@
   .header__menu {
     display: flex;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 150vw;
+    height: 150vh;
     background-color: $background-color;
     position: fixed;
     top: 10px;
@@ -168,6 +170,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
+  margin-left: 0px;
   align-items: center;
   margin-top: 120px;
   font-weight: $menu-weight !important;
@@ -184,7 +187,7 @@
     line-height: $h4-lineheight;
     letter-spacing: $h4-spacing-small;
     text-transform: none;
-    padding-bottom: 30px;
+    padding-bottom: 6px;
 
     &.active-link {
       color: $accent-color;
@@ -232,6 +235,7 @@ from {
   }
 
   @include mq(tabletp) {
+    margin-left: 50px;
     margin-top: 0;
     flex-direction: row;
 
